# Digital_Twins_ACL

./: .gitignore  .gitmodules  README.md  main.py  pyproject.toml  requirements.txt
config/: config_template.yaml
docs/: LICENSE
firmware/: base.ino  write_to_card.ino
src/: main.py  mqtt_client.py
src/config/: __init__.py  config.py  config_template.yaml
test/: test.py
